--- a/index.html
+++ b/index.html
@@ -370,6 +370,14 @@
                 <!-- Success Message (hidden by default) -->
                 <div id="success-message" class="success-message" style="display: none;">
                     <h2 class="thank-you-title">Mulțumim!</h2>
+
+                    <div class="success-checkmark">
+                        <svg width="80" height="80" viewBox="0 0 80 80" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="40" cy="40" r="38" fill="#E45F74" stroke="#E45F74" stroke-width="2" />
+                            <path d="M25 40 L35 50 L55 30" stroke="white" stroke-width="4" stroke-linecap="round"
+                                stroke-linejoin="round" fill="none" />
+                        </svg>
+                    </div>
                     <p class="thank-you-text">
                         Confirmarea ta a fost trimisă cu succes. Abia așteptăm să sărbătorim împreună cu tine!
                     </p>
