--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
         <div class="hero-content">
             <img src="assets/ribbon.png" alt="Ribbon" class="hero-ribbon">
             <h1 class="hero-date">25 Aprilie 2026</h1>
-            <p class="hero-save-date">Save the date</p>
             <div class="hero-names">
                 Ramona & Sergiu
             </div>
@@ -104,7 +103,7 @@
     <!-- Ziua Nuntii Section -->
     <section class="ziua-nuntii-section" id="detalii">
         <div class="container">
-            <h2 class="section-title">Ziua Nuntii</h2>
+            <h2 class="section-title">Ziua Nunții</h2>
             <div class="section-divider">
                 <span class="divider-line"></span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -130,8 +129,8 @@
                     <div class="timeline-content">
                         <div class="timeline-icon">💒</div>
                         <h3 class="timeline-title">Ceremonia Religioasă 14:00</h3>
-                        <p class="timeline-description">Va avea loc la Biserica Ortodoxă „Sfântul Apostol Toma" pe Calea
-                            Dorobantilor 102 de la ora 14:00.</p>
+                        <p class="timeline-description">Biserica Ortodoxă „Sfântul Apostol Toma"</p>
+                        <p class="timeline-description" style="font-style: italic; font-size: 0.9rem; margin-top: 0.5rem;">Calea Dorobanților 102, Cluj-Napoca</p>
                     </div>
                     <div class="timeline-dot"></div>
                 </div>
@@ -141,8 +140,8 @@
                     <div class="timeline-content">
                         <div class="timeline-icon">🍾</div>
                         <h3 class="timeline-title">Petrecerea 16:00</h3>
-                        <p class="timeline-description">Receptia invitatilor si inceperea petrecerii va incepe la ora
-                            16:00, WildGarden by AfterEight, pe strada Drumul Sfantul Ioan 266.</p>
+                        <p class="timeline-description">WildGarden by AfterEight</p>
+                        <p class="timeline-description" style="font-style: italic; font-size: 0.9rem; margin-top: 0.5rem;">Strada Drumul Sfantul Ioan 266, Cluj-Napoca</p>
                     </div>
                 </div>
 
@@ -150,7 +149,7 @@
                     <div class="timeline-content">
                         <div class="timeline-icon">💃🕺</div>
                         <h3 class="timeline-title">Dansul mirilor 17:30</h3>
-                        <p class="timeline-description">Va vom delecta cu abilitatile noastre dansante.</p>
+                        <p class="timeline-description">Vă vom delecta cu abilitatile noastre dansante.</p>
                     </div>
                     <div class="timeline-dot"></div>
                 </div>
@@ -160,8 +159,8 @@
                     <div class="timeline-content">
                         <div class="timeline-icon">🎂</div>
                         <h3 class="timeline-title">Tortul TBD</h3>
-                        <p class="timeline-description">Stim cu totii ca pentru asta mergem la nunta, si va merita
-                            asteptarea.</p>
+                        <!-- <p class="timeline-description">Stim cu totii ca pentru asta mergem la nunta, si va merita
+                            asteptarea.</p> -->
                     </div>
                 </div>
             </div>
@@ -171,7 +170,7 @@
     <!-- Detalii Section -->
     <section class="countdown-section" id="locatie">
         <div class="container">
-            <h2 class="section-title">Locatia nuntii</h2>
+            <h2 class="section-title">Locatia nunții</h2>
             <div class="section-divider">
                 <span class="divider-line"></span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -204,7 +203,7 @@
     <!-- Photo Gallery Section -->
     <section class="photo-gallery-section" id="galerie">
         <div class="container">
-            <h2 class="section-title">In caz ca vi se face dor de noi...</h2>
+            <h2 class="section-title">Cu cine vă veți distra...</h2>
             <div class="section-divider">
                 <span class="divider-line"></span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -243,32 +242,16 @@
                         onclick="openLightbox('assets/italia2.jpg')">
                 </div>
                 <div class="photo-item">
-                    <img src="assets/dans.JPG" alt="Photo 5" class="gallery-image"
-                        onclick="openLightbox('assets/dans.JPG')">
-                </div>
-                <div class="photo-item">
                     <img src="assets/ramo&sergiu2.JPG" alt="Photo 6" class="gallery-image"
                         onclick="openLightbox('assets/ramo&sergiu2.JPG')">
-                </div>
-                <div class="photo-item">
-                    <img src="assets/camp.JPG" alt="Photo 7" class="gallery-image"
-                        onclick="openLightbox('assets/camp.JPG')">
                 </div>
                 <div class="photo-item">
                     <img src="assets/mauritius3.jpg" alt="Photo 8" class="gallery-image"
                         onclick="openLightbox('assets/mauritius3.jpg')">
                 </div>
                 <div class="photo-item">
-                    <img src="assets/rico.jpg" alt="Photo 8" class="gallery-image"
-                        onclick="openLightbox('assets/rico.jpg')">
-                </div>
-                <div class="photo-item">
                     <img src="assets/dans2.jpg" alt="Photo 8" class="gallery-image"
                         onclick="openLightbox('assets/dans2.jpg')">
-                </div>
-                <div class="photo-item">
-                    <img src="assets/untold.jpg" alt="Photo 8" class="gallery-image"
-                        onclick="openLightbox('assets/untold.jpg')">
                 </div>
                 <div class="photo-item">
                     <img src="assets/ramo&sergiu1.JPG" alt="Photo 8" class="gallery-image"
@@ -393,7 +376,7 @@
                         Confirmarea ta a fost trimisă cu succes. Abia așteptăm să sărbătorim împreună cu tine!
                     </p>
                     <p class="thank-you-subtext">
-                        Îți vom trimite confirmarea și detalii suplimentare pe email sau telefon dacă este necesar.
+                        Îți vom trimite confirmarea și detalii suplimentare pe email.
                     </p>
                 </div>
             </div>
@@ -406,39 +389,21 @@
             <h2 class="section-title">Întrebări frecvente</h2>
             <div class="faq-list">
                 <div class="faq-item">
+                    <h3 class="faq-question">Este parcare in zona?</h3>
+                    <p class="faq-answer">Da, la 100m mai sus de intrarea la locație este parcare dedicata pentru eveniment.</p>
+                </div>
+                <div class="faq-item">
+                    <h3 class="faq-question">Vine taxi/bolt până la locație?</h3>
+                    <p class="faq-answer">Da, se ajunge usor la locație cu taxi/bolt.
+                    </p>
+                </div>
+                <div class="faq-item">
+                    <h3 class="faq-question">Daca sunt vegetarian sau am restrictii alimentare trebuie sa anunț?</h3>
+                    <p class="faq-answer">Nu, nu este nevoie sa anunți. Meniul contine o varietate de opțiuni vegetariene.</p>
+                </div>
+                <div class="faq-item">
                     <h3 class="faq-question">Pot aduce copii?</h3>
-                    <p class="faq-answer">[Răspuns despre copii – ex: Da, sunt bineveniți! / Nu, este un eveniment doar
-                        pentru adulți.]</p>
-                </div>
-
-                <div class="faq-item">
-                    <h3 class="faq-question">Pot aduce un plus-one?</h3>
-                    <p class="faq-answer">Te rugăm să ne contactezi înainte pentru a confirma numărul exact de persoane.
-                    </p>
-                </div>
-
-                <div class="faq-item">
-                    <h3 class="faq-question">Aveți restricții alimentare sau alergii?</h3>
-                    <p class="faq-answer">Te rugăm să ne menționezi orice restricții alimentare sau alergii în
-                        formularul de RSVP sau să ne contactezi direct.</p>
-                </div>
-
-                <div class="faq-item">
-                    <h3 class="faq-question">Putem face fotografii?</h3>
-                    <p class="faq-answer">[Răspuns despre fotografii – ex: Da, încurajăm fotografii! Folosește
-                        hashtag-ul #NuntaFaina pe social media.]</p>
-                </div>
-
-                <div class="faq-item">
-                    <h3 class="faq-question">Există opțiuni de cazare în apropiere?</h3>
-                    <p class="faq-answer">[Informații despre cazare – ex: Lista cu recomandări de hoteluri sau linkuri
-                        utile.]</p>
-                </div>
-
-                <div class="faq-item">
-                    <h3 class="faq-question">Ce se întâmplă dacă nu pot veni?</h3>
-                    <p class="faq-answer">Te rugăm să ne anunți cât mai curând posibil pentru a ne ajuta în planificare.
-                    </p>
+                    <p class="faq-answer">Da, sunt bineveniți!</p>
                 </div>
             </div>
         </div>
