--- a/index.html
+++ b/index.html
@@ -27,21 +27,18 @@
 <body>
     <!-- Header -->
     <header class="main-header">
-        <img src="assets/marriage.png" alt="Marriage" class="header-logo">
-        <nav class="header-nav">
             <a href="#countdown" class="nav-link">Countdown</a>
             <a href="#detalii" class="nav-link">Detalii</a>
-            <a href="#locatie" class="nav-link">Locatie</a>
+            <a href="#locatie" class="nav-link">Locație</a>
             <a href="#galerie" class="nav-link">Galerie</a>
-            <a href="#prezenta" class="nav-link">Prezenta</a>
-        </nav>
+            <a href="#prezenta" class="nav-link">Prezența</a>
     </header>
 
     <!-- Hero Banner Section -->
     <section class="hero-banner">
         <div class="hero-overlay"></div>
         <div class="hero-content">
-            <img src="assets/ribbon.png" alt="Ribbon" class="hero-ribbon">
+            <img src="assets/marriage.png" alt="Marriage" class="hero-ribbon">
             <h1 class="hero-date">25 Aprilie 2026</h1>
             <div class="hero-names">
                 Ramona & Sergiu
@@ -51,11 +48,11 @@
 
     <section class="countdown-section" id="countdown">
         <div class="container">
-            <h2 class="section-title">Au mai ramas...</h2>
+            <h2 class="section-title">Au mai rămas...</h2>
             <div class="section-divider">
                 <span class="divider-line"></span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                    stroke="#E45F74" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    stroke="#CDB4DB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                     class="divider-icon">
                     <circle cx="12" cy="12" r="3" />
                     <path
@@ -103,11 +100,11 @@
     <!-- Ziua Nuntii Section -->
     <section class="ziua-nuntii-section" id="detalii">
         <div class="container">
-            <h2 class="section-title">Ziua Nunții</h2>
+            <h2 class="section-title" style="color: rgb(255, 255, 255, 1);">Ziua Nunții</h2>
             <div class="section-divider">
                 <span class="divider-line"></span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                    stroke="#E45F74" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    stroke="#CDB4DB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                     class="divider-icon">
                     <circle cx="12" cy="12" r="3" />
                     <path
@@ -128,7 +125,7 @@
                 <div class="timeline-item timeline-left">
                     <div class="timeline-content">
                         <div class="timeline-icon">💒</div>
-                        <h3 class="timeline-title">Ceremonia Religioasă 14:00</h3>
+                        <h3 class="timeline-title">Ceremonia Religioasă - 14:00</h3>
                         <p class="timeline-description">Biserica Ortodoxă „Sfântul Apostol Toma"</p>
                         <p class="timeline-description" style="font-style: italic; font-size: 0.9rem; margin-top: 0.5rem;">Calea Dorobanților 102, Cluj-Napoca</p>
                     </div>
@@ -139,7 +136,7 @@
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
                         <div class="timeline-icon">🍾</div>
-                        <h3 class="timeline-title">Petrecerea 16:00</h3>
+                        <h3 class="timeline-title">Petrecerea - 16:00</h3>
                         <p class="timeline-description">WildGarden by AfterEight</p>
                         <p class="timeline-description" style="font-style: italic; font-size: 0.9rem; margin-top: 0.5rem;">Strada Drumul Sfantul Ioan 266, Cluj-Napoca</p>
                     </div>
@@ -148,8 +145,7 @@
                 <div class="timeline-item timeline-left">
                     <div class="timeline-content">
                         <div class="timeline-icon">💃🕺</div>
-                        <h3 class="timeline-title">Dansul mirilor 17:30</h3>
-                        <p class="timeline-description">Vă vom delecta cu abilitatile noastre dansante.</p>
+                        <h3 class="timeline-title">Dansul mirilor - 17:30</h3>
                     </div>
                     <div class="timeline-dot"></div>
                 </div>
@@ -158,9 +154,7 @@
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
                         <div class="timeline-icon">🎂</div>
-                        <h3 class="timeline-title">Tortul TBD</h3>
-                        <!-- <p class="timeline-description">Stim cu totii ca pentru asta mergem la nunta, si va merita
-                            asteptarea.</p> -->
+                        <h3 class="timeline-title">Tortul - 23:00</h3>
                     </div>
                 </div>
             </div>
@@ -174,7 +168,7 @@
             <div class="section-divider">
                 <span class="divider-line"></span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                    stroke="#E45F74" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    stroke="#CDB4DB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                     class="divider-icon">
                     <circle cx="12" cy="12" r="3" />
                     <path
@@ -207,7 +201,7 @@
             <div class="section-divider">
                 <span class="divider-line"></span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                    stroke="#E45F74" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    stroke="#CDB4DB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                     class="divider-icon">
                     <circle cx="12" cy="12" r="3" />
                     <path
@@ -280,7 +274,25 @@
         <div class="container">
             <div class="form-card">
                 <h2 class="section-title">Confirmă prezența</h2>
-
+                <div class="section-divider">
+                    <span class="divider-line"></span>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        stroke="#CDB4DB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                        class="divider-icon">
+                        <circle cx="12" cy="12" r="3" />
+                        <path
+                            d="M12 16.5A4.5 4.5 0 1 1 7.5 12 4.5 4.5 0 1 1 12 7.5a4.5 4.5 0 1 1 4.5 4.5 4.5 4.5 0 1 1-4.5 4.5" />
+                        <path d="M12 7.5V9" />
+                        <path d="M7.5 12H9" />
+                        <path d="M16.5 12H15" />
+                        <path d="M12 16.5V15" />
+                        <path d="m8 8 1.88 1.88" />
+                        <path d="M14.12 9.88 16 8" />
+                        <path d="m8 16 1.88-1.88" />
+                        <path d="M14.12 14.12 16 16" />
+                    </svg>
+                    <span class="divider-line"></span>
+                </div>
                 <div id="form-container">
                     <form name="rsvp" method="POST" action="/multumim.html" data-netlify="true"
                         netlify-honeypot="bot-field" class="rsvp-form" id="rsvp-form">
@@ -367,7 +379,7 @@
 
                     <div class="success-checkmark">
                         <svg width="80" height="80" viewBox="0 0 80 80" xmlns="http://www.w3.org/2000/svg">
-                            <circle cx="40" cy="40" r="38" fill="#E45F74" stroke="#E45F74" stroke-width="2" />
+                            <circle cx="40" cy="40" r="38" fill="#CDB4DB" stroke="#CDB4DB" stroke-width="2" />
                             <path d="M25 40 L35 50 L55 30" stroke="white" stroke-width="4" stroke-linecap="round"
                                 stroke-linejoin="round" fill="none" />
                         </svg>
@@ -387,6 +399,25 @@
     <section class="section section-alt" id="faq">
         <div class="container">
             <h2 class="section-title">Întrebări frecvente</h2>
+            <div class="section-divider">
+                <span class="divider-line"></span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="#CDB4DB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="divider-icon">
+                    <circle cx="12" cy="12" r="3" />
+                    <path
+                        d="M12 16.5A4.5 4.5 0 1 1 7.5 12 4.5 4.5 0 1 1 12 7.5a4.5 4.5 0 1 1 4.5 4.5 4.5 4.5 0 1 1-4.5 4.5" />
+                    <path d="M12 7.5V9" />
+                    <path d="M7.5 12H9" />
+                    <path d="M16.5 12H15" />
+                    <path d="M12 16.5V15" />
+                    <path d="m8 8 1.88 1.88" />
+                    <path d="M14.12 9.88 16 8" />
+                    <path d="m8 16 1.88-1.88" />
+                    <path d="M14.12 14.12 16 16" />
+                </svg>
+                <span class="divider-line"></span>
+            </div>
             <div class="faq-list">
                 <div class="faq-item">
                     <h3 class="faq-question">Este parcare in zona?</h3>
