--- a/index.html
+++ b/index.html
@@ -10,9 +10,23 @@
     <meta property="og:title" content="Ramona & Sergiu">
     <meta property="og:description"
         content="Confirmă prezența la Nunta Faină. Vezi programul, locația și detaliile utile.">
-    <meta property="og:image" content="/assets/og-image.svg">
+    <meta property="og:image" content="https://nuntafaina.ro/assets/og-image.svg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Ramona & Sergiu">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://nuntafaina.ro">
+    <meta property="og:site_name" content="Ramona & Sergiu">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Ramona & Sergiu">
+    <meta name="twitter:description"
+        content="Confirmă prezența la Nunta Faină. Vezi programul, locația și detaliile utile.">
+    <meta name="twitter:image" content="https://nuntafaina.ro/assets/og-image.svg">
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#CDB4DB">
 
     <title>Ramona & Sergiu</title>
 
@@ -27,11 +41,11 @@
 <body>
     <!-- Header -->
     <header class="main-header">
-            <a href="#countdown" class="nav-link">Countdown</a>
-            <a href="#detalii" class="nav-link">Detalii</a>
-            <a href="#locatie" class="nav-link">Locație</a>
-            <a href="#galerie" class="nav-link">Galerie</a>
-            <a href="#prezenta" class="nav-link">Prezența</a>
+        <a href="#countdown" class="nav-link">Countdown</a>
+        <a href="#detalii" class="nav-link">Detalii</a>
+        <a href="#locatie" class="nav-link">Locație</a>
+        <a href="#galerie" class="nav-link">Galerie</a>
+        <a href="#prezenta" class="nav-link">Prezența</a>
     </header>
 
     <!-- Hero Banner Section -->
@@ -127,7 +141,9 @@
                         <div class="timeline-icon">💒</div>
                         <h3 class="timeline-title">Ceremonia Religioasă - 14:00</h3>
                         <p class="timeline-description">Biserica Ortodoxă „Sfântul Apostol Toma"</p>
-                        <p class="timeline-description" style="font-style: italic; font-size: 0.9rem; margin-top: 0.5rem;">Calea Dorobanților 102, Cluj-Napoca</p>
+                        <p class="timeline-description"
+                            style="font-style: italic; font-size: 0.9rem; margin-top: 0.5rem;">Calea Dorobanților 102,
+                            Cluj-Napoca</p>
                     </div>
                     <div class="timeline-dot"></div>
                 </div>
@@ -138,7 +154,9 @@
                         <div class="timeline-icon">🍾</div>
                         <h3 class="timeline-title">Petrecerea - 16:00</h3>
                         <p class="timeline-description">WildGarden by AfterEight</p>
-                        <p class="timeline-description" style="font-style: italic; font-size: 0.9rem; margin-top: 0.5rem;">Strada Drumul Sfantul Ioan 266, Cluj-Napoca</p>
+                        <p class="timeline-description"
+                            style="font-style: italic; font-size: 0.9rem; margin-top: 0.5rem;">Strada Drumul Sfantul
+                            Ioan 266, Cluj-Napoca</p>
                     </div>
                 </div>
 
@@ -421,7 +439,8 @@
             <div class="faq-list">
                 <div class="faq-item">
                     <h3 class="faq-question">Este parcare in zona?</h3>
-                    <p class="faq-answer">Da, la 100m mai sus de intrarea la locație este parcare dedicata pentru eveniment.</p>
+                    <p class="faq-answer">Da, la 100m mai sus de intrarea la locație este parcare dedicata pentru
+                        eveniment.</p>
                 </div>
                 <div class="faq-item">
                     <h3 class="faq-question">Vine taxi/bolt până la locație?</h3>
@@ -430,7 +449,8 @@
                 </div>
                 <div class="faq-item">
                     <h3 class="faq-question">Daca sunt vegetarian sau am restrictii alimentare trebuie sa anunț?</h3>
-                    <p class="faq-answer">Nu, nu este nevoie sa anunți. Meniul contine o varietate de opțiuni vegetariene.</p>
+                    <p class="faq-answer">Nu, nu este nevoie sa anunți. Meniul contine o varietate de opțiuni
+                        vegetariene.</p>
                 </div>
                 <div class="faq-item">
                     <h3 class="faq-question">Pot aduce copii?</h3>
